outobund/namespace-outbound.yaml
# creates namespace named "hello"
apiVersion: v1
kind: Namespace
metadata:
  name: outbound
