outobund/oracle-deployment-outbound-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: lucy-oracle-ms
  name: lucy-oracle-ms
  namespace: outbound
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 30%
      maxUnavailable: 50%
    type: RollingUpdate
  selector:
    matchLabels:
      name: service-oracle-ms
  template:
    metadata:
      labels:
        name: service-oracle-ms
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: IfNotPresent
        name: nginx-proxy
        ports:
        - containerPort: 80
          name: proxy-http
          protocol: TCP
        resources:
          limits:
            cpu: 15m
            memory: 15Mi
          requests:
            cpu: 10m
            memory: 10Mi
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-proxy-config
          subPath: nginx.conf
      - args:
        - dotnet
        - oracle-conversation-microservice.dll
        image: apdockerdotnet/oracle
        imagePullPolicy: Always
        name: api
        resources:
          limits:
            cpu: 80m
            memory: 80Mi
          requests:
            cpu: 30m
            memory: 30Mi
        volumeMounts:
        - name: appsettings
          mountPath: /app/appsettings.json
          subPath: appsettings.json
          readOnly: true
      volumes:
      - configMap:
          name: nginx-oracle-map
        name: nginx-proxy-config
      - name: appsettings
        secret:
          secretName: secret-appsettings-oracle
