outobund/oracle-service-outbound-ms.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-oracle-ms
  namespace: outbound
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: service-oracle-ms
  type: ClusterIP
